<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:id="@+id/parent_container"
        android:layout_width="match_parent"
        android:background="@drawable/background"
        android:layout_height="match_parent">

        <!-- container for image of character and its name-->
        <RelativeLayout
            android:id="@+id/rl_dp_name_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ProgressBar
                android:id="@+id/pb_image_progress_bar"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:layout_width="@dimen/image_loader_progress_bar_width"
                android:layout_height="@dimen/image_loader_progress_bar_height" />
            <!-- Image view to show character's image-->
            <com.android.volley.toolbox.NetworkImageView
                android:id="@+id/niv_character_image_detail_view"
                android:layout_width="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:layout_height="@dimen/character_image_height_character_detail" />
            <!-- Text name to display character name-->
            <TextView
                android:id="@+id/tv_character_name_detail_view"
                android:layout_below="@id/niv_character_image_detail_view"
                android:background="@drawable/translucent"
                android:layout_width="match_parent"
                android:textSize="25sp"
                android:text="Character Name"
                android:layout_alignParentBottom="true"
                android:paddingBottom="5dip"
                android:paddingLeft="10dip"
                android:layout_height="@dimen/character_name_height" />
        </RelativeLayout>

        <!-- Description title-->
        <TextView
            android:id="@+id/tv_description_title"
            android:layout_below="@id/rl_dp_name_container"
            android:text="@string/title_description"
            style="@style/titleTextView"/>

        <!-- Detailed description-->
        <TextView
            android:id="@+id/tv_description"
            android:layout_below="@id/tv_description_title"
            android:text="@string/description"
            android:textColor="@color/color_white"
            android:padding="16dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <!-- Comics title-->
        <TextView
            style="@style/titleTextView"
            android:layout_below="@id/tv_description"
            android:text="@string/title_comics"
            android:id="@+id/tv_comics_title" />

        <!-- Horizontal comics scroller-->
        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_comics_list"
            android:layout_below="@id/tv_comics_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </android.support.v7.widget.RecyclerView>

        <!-- Series title-->
        <TextView
            style="@style/titleTextView"
            android:layout_below="@id/rv_comics_list"
            android:text="@string/title_series"
            android:id="@+id/tv_series_title" />

        <!-- Horizontal series scroller-->
        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_series_list"
            android:layout_below="@id/tv_series_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </android.support.v7.widget.RecyclerView>

        <!-- Stories title-->
        <TextView
            style="@style/titleTextView"
            android:layout_below="@id/rv_series_list"
            android:text="@string/title_stories"
            android:id="@+id/tv_stories_title" />

        <!-- Horizontal stories scroller-->
        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_stories_list"
            android:layout_below="@id/tv_stories_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </android.support.v7.widget.RecyclerView>

        <!-- Events title-->
        <TextView
            style="@style/titleTextView"
            android:layout_below="@id/rv_stories_list"
            android:text="@string/title_events"
            android:id="@+id/tv_events_title" />

        <!-- Horizontal events scroller-->
        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_events_list"
            android:layout_below="@id/tv_events_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </android.support.v7.widget.RecyclerView>

        <!-- Related link title-->
        <TextView
            style="@style/titleTextView"
            android:layout_below="@id/rv_events_list"
            android:text="@string/title_related_links"
            android:id="@+id/tv_related_links_title" />
        <LinearLayout
            android:id="@+id/ll_related_link_container"
            android:layout_below="@id/tv_related_links_title"
            android:padding="16dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </LinearLayout>
    </RelativeLayout>

</ScrollView>